<resources>
    <string name="app_name">Firebase</string>
    <string name="d_tv_1">"Name Of\nMedicine"</string>
    <string name="d_tv_2">Quantity</string>
    <string name="d_tv_3">Address</string>
    <string name="d_b_1">Donate</string>
    <string name="d_tv_4">Expiry Date</string>
    <string name="d_et_1">Name Of Medicine</string>
    <string name="d_et_2">Quantity</string>
    <string name="d_et_3">Address of Pickup</string>
    <string name="d_et_4">MM</string>
    <string name="d_et_5">YYYY</string>
    <string name="health_tv_head">Health Analyser</string>
    <string name="health_tv_1">Height</string>
    <string name="health_tv_2">Weight</string>
    <string name="health_tv_3">Sugar Level</string>
    <string name="health_b_1">Calculate BMI</string>
    <string name="diabetic_test">Diabetic Test</string>
    <string name="db_tv_head">You are Diabetic</string>
    <string name="db_tv_1">content</string>
    <string name="ow_tv_2">content</string>
    <string name="ow_tv_head">You are overweight</string>
    <string name="uw_tv_2">Content</string>
    <string name="uw_tv_head">You are Underweight</string>
</resources>
